各產品頁面

--- a/index.html
+++ b/index.html
@@ -95,15 +95,19 @@
 															產品介紹
 														</a>
 														<ul class="dropdown-menu">
-															<li>
-																<a class="dropdown-item" href="YS-250.html">YS-250 數位無線擴音音箱</a>
+															<li class="dropdown-submenu">
+																<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
+																<ul class="dropdown-menu">
+																	<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																	<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																	<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																	<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																</ul>
 															</li>
 															<li>
-																<!---onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');"--->
-																<a class="dropdown-item" href="smartMic.html">二代智慧無線麥克風擴音系列</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="YH801.html">一代無線麥克風組</a>
+																<a class="dropdown-item" href="YH801.html">
+																	YH-801 一代無線麥克風組
+																</a>
 															</li>
 														</ul>
 													</li>
@@ -133,7 +137,9 @@
 
 			<div role="main" class="main">
 
-				<div class="owl-carousel owl-carousel-light owl-carousel-light-init-fadeIn owl-theme manual bg-color-light-scale-1 dots-inside dots-horizontal-center show-dots-hover show-dots-xs nav-inside nav-inside-plus nav-light nav-lg nav-font-size-md show-nav-hover rounded-nav mb-0" data-plugin-options="{'autoplayTimeout': 3000}" style="height: calc( 100vh - 200px );">
+				<div
+					class="owl-carousel owl-theme owl-loaded owl-carousel-init bg-color-light-scale-1 dots-inside dots-horizontal-center show-dots-hover show-dots-xs nav-inside nav-inside-plus nav-light nav-lg nav-font-size-md show-nav-hover rounded-nav mb-0"
+					data-plugin-options="{'items': 1, 'loop': true, 'autoplay': true, 'autoplayTimeout': 4000}" style="height: calc( 100vh - 200px );">
 					<div class="owl-stage-outer">
 						<div class="owl-stage">
 						
@@ -173,7 +179,7 @@
 							</div>
 
 							<!-- Carousel Slide 2 -->
-							<!-- <div class="owl-item position-relative" style="height: calc( 100vh - 100px );">
+							<div class="owl-item position-relative" style="height: calc( 100vh - 100px );">
 								<div class="container position-relative z-index-3 h-100">
 									<div class="row align-items-center h-100">
 										<div class="col-lg-5 d-none d-lg-block">
@@ -191,7 +197,7 @@
 										</div>
 									</div>
 								</div>
-							</div> -->
+							</div>
 						
 						</div>
 					</div>
