--- a/smartMic.html
+++ b/smartMic.html
@@ -93,7 +93,7 @@
 														首頁
 													</a>
 												</li>
-												<li class="dropdown dropdown-mega">
+												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="about.html">
 														關於我們
 													</a>
@@ -103,17 +103,33 @@
 														產品介紹
 													</a>
 													<ul class="dropdown-menu">
-														<li>
-															<a class="dropdown-item" href="YS-250.html">YS-250 數位無線擴音音箱</a>
+														<li class="dropdown-submenu">
+															<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
+															<ul class="dropdown-menu">
+																<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+															</ul>
 														</li>
 														<li>
-															<!---onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');"--->>
+															<a class="dropdown-item" href="YH801.html">
+																YH-801 一代無線麥克風組
+															</a>
+														</li>
+													</ul>
+													<!-- <ul class="dropdown-menu">
+														<li>
+															<a class="dropdown-item" href="YS-250.html">YS-250 數位無線擴音音箱</a>
+														</li> 
+														<li class="dropdown">
+															<onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');">
 															<a class="dropdown-item" href="smartMic.html">二代智慧無線麥克風擴音系列</a>
 														</li>
 														<li>
 															<a class="dropdown-item" href="YH801.html">一代無線麥克風組</a>
 														</li>
-													</ul>
+													</ul> -->
 												</li>
 												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="service.html">
@@ -144,13 +160,14 @@
 				style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-							<h1 class="font-weight-bold text-8 mb-0">二代智慧無線麥克風擴音系列</h1>
+						<div class="col-md-7 order-2 order-md-1 align-self-center p-static">
+							<h1 class="font-weight-bold text-8 mb-0">二代無線擴音 <span class="text-0 special-10">/</span> 麥克風</h1>
 						</div>
-						<div class="col-md-4 order-1 order-md-2 align-self-center">
+						<div class="col-md-5 order-1 order-md-2 align-self-center">
 							<ul class="breadcrumb breadcrumb-light d-block text-md-right text-4 mb-0">
 								<li><a href="index.html" class="text-decoration-none">首頁</a></li>
-								<li class="active">二代智慧無線麥克風擴音系列</li>
+								<li class="active">二代無線擴音 <span class="text-0 special-5">/</span> 麥克風</li>
+								<li class="active">YS-100 手持無線麥克風</li>
 							</ul>
 						</div>
 					</div>
@@ -255,92 +272,95 @@
 					</div>
 
 					<div class="row mb-4 pb-4">
-						<div class="col">
+						<div class="col-lg-6 mb-4 mb-lg-0">
 							<div class="image-hotspots">
-								<img src="img/products/YS-100/YS-100-01.png" class="img-fluid" />
-
-								<a style="left: 49%; top: 0;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="麥克風網罩" data-img="img/products/YS-100/YS-100-01a.png"
-									data-intro="網罩與機身一體設計：海棉套嵌入式設計，3D立體造型外觀" data-introb="">
+								<img src="img/products/YS-100/YS-100-01.jpg" class="img-fluid" />
+								<a style="left: 49%; top: 0;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-100/YS-100-01a.png" onclick="selectItem('ys-1')">
 									<strong>1</strong>
 								</a>
 
-								<a style="right: 41%; top: 12%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="海綿套" data-img="img/products/YS-100/YS-100-01b.png"
-									data-intro="內置於網罩內可保持海棉套清潔，可輕易更換" data-introb="">
+								<a style="right: 31%; top: 12%;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-100/YS-100-01b.png" onclick="selectItem('ys-2')">
 									<strong>2</strong>
 								</a>
 
-								<a style="right: 40.5%; top: 50%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="電源鍵 / 功能鍵" data-img="img/products/YS-100/YS-100-01c.png"
-									data-intro="大按鍵設計，簡易操作">
+								<a style="right: 30%; top: 50%;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-100/YS-100-01c.png" onclick="selectItem('ys-3')">
 									<strong>3</strong>
 								</a>
 
-								<a style="right: 40.8%; top: 68%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="LED燈號顯示" data-img="img/products/YS-100/YS-100-01c.png"
-									data-intro="LED 清晰顯示方式，可輕易了解麥克風狀態" data-introb="">
+								<a style="left: 30%; top: 50%;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-100/YS-100-01c.png" onclick="selectItem('ys-4')">
 									<strong>4</strong>
 								</a>
 
-								<a style="right: 42.5%; top: 94%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="音量+ / 音量-" data-img="img/products/YS-100/YS-100-01d.png"
-									data-intro="符合人體工學設計" data-introb="">
+								<a style="right: 32%; top: 68%;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-100/YS-100-01d.png" onclick="selectItem('ys-5')">
 									<strong>5</strong>
 								</a>
 
-								<a style="left: 40%; top: 50%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="双吊繩孔 (手腕, 頸掛)" data-img="img/products/YS-200/YS-200-01e.png"
-									data-intro="麥克風的底部與背面有兩組吊繩孔設計，可搭配短、長吊繩，兼顧美觀與使用便利" data-introb="">
-									<strong>5</strong>
+								<a style="right: 50%; top: 100%;" class="image-hotspot image-hotspot-primary"
+									data-img="img/products/YS-200/YS-200-01e.png" onclick="selectItem('ys-6')">
+									<strong>6</strong>
 								</a>
 
 							</div>
-							<div class="modal fade" id="YS-100_intro" tabindex="-1" role="dialog" aria-labelledby="YS-100_introLabel"
-								aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h4 class="modal-title" id="YS-100_introLabel">Title</h4>
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-										</div>
-										<div class="modal-body">
-											<p class="text-left note"></p>
-											<p class="text-left noteb"></p>
-											<img src="" alt="" class="img-responsive img-thumbnail">
-										</div>
-									</div>
-								</div>
+						</div>
+						<div class="col-lg-6 mb-4 mb-lg-0">
+							<ol class="list list-ordened list-ordened-style-2 pl-0">
+								<li class="ys-1">
+									<h4 class="font-weight-semibold mb-1">麥克風網罩 :</h4>
+									<span class="text-3-4">網罩與機身一體設計：海棉套嵌入式設計，3D立體造型外觀。</span>
+								</li>
+								<li class="ys-2">
+									<h4 class="font-weight-semibold mb-1">海綿套 :</h4>
+									<span class="text-3-4">內置於網罩內可保持海棉套清潔，可輕易更換。</span>
+								</li>
+								<li class="ys-3">
+									<h4 class="font-weight-semibold mb-1">電源鍵 / 功能鍵 :</h4>
+									<span class="text-3-4">大按鍵設計，簡易操作。</span>
+								</li>
+								<li class="ys-4">
+									<h4 class="font-weight-semibold mb-1">LED燈號顯示 :</h4>
+									<span class="text-3-4">LED 清晰顯示方式，可輕易了解麥克風狀態。</span>
+								</li>
+								<li class="ys-5">
+									<h4 class="font-weight-semibold mb-1">音量+ / 音量- :</h4>
+									<span class="text-3-4">符合人體工學設計。</span>
+								</li>
+								<li class="ys-6">
+									<h4 class="font-weight-semibold mb-1">双吊繩孔 (手腕, 頸掛) :</h4>
+									<span class="text-3-4">麥克風的底部與背面有兩組吊繩孔設計，可搭配短、長吊繩，兼顧美觀與使用便利。</span>
+								</li>
+							</ol>
+							<div class="pro-spec">
+								<ul class="specNote">
+									<li>
+										<i class="far fa-microchip"></i>
+										<span>手機大廠<br>高通晶片</span>
+									</li>
+									<li>
+										<i class="far fa-lightbulb"></i>
+										<span>簡潔<br>LED燈號</span>
+									</li>
+									<li>
+										<i class="far fa-thumbs-up"></i>
+										<span>簡易<br>操作介面</span>
+									</li>
+									<li>
+										<i class="far fa-microphone-alt"></i>
+										<span>高清晰<br>立體音質</span>
+									</li>
+									<li>
+										<i class="far fa-battery-bolt"></i>
+										<span>長效電池<br>+保護晶片</span>
+									</li>
+								</ul>
 							</div>
-
-
 						</div>
 					</div>
 
-				</div>
-				<div class="pro-spec">
-					<ul class="specNote">
-						<li>
-							<i class="far fa-microchip"></i>
-							<span>手機大廠<br>高通晶片</span>
-						</li>
-						<li>
-							<i class="far fa-lightbulb"></i>
-							<span>簡潔<br>LED燈號</span>
-						</li>
-						<li>
-							<i class="far fa-thumbs-up"></i>
-							<span>簡易<br>操作介面</span>
-						</li>
-						<li>
-							<i class="far fa-microphone-alt"></i>
-							<span>高清晰<br>立體音質</span>
-						</li>
-						<li>
-							<i class="far fa-battery-bolt"></i>
-							<span>長效電池<br>+保護晶片</span>
-						</li>
-					</ul>
 				</div>
 			</div>
 
@@ -508,81 +528,76 @@
 					</div>
 
 					<div class="row mb-4 pb-4">
-						<div class="col">
+						<div class="col-lg-6 mb-4 mb-lg-0">
 							<div class="image-hotspots">
-								<img src="img/products/YS-150/YS-150-01a.png" class="img-fluid" />
+								<img src="img/products/YS-150/YS-150-01a.jpg" class="img-fluid" />
 
-								<a style="left: 34%; top: 5px;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="海綿套" data-img="img/products/YS-150/YS-150-01b.png"
-									data-intro="可水洗 隨時更換" data-introb="">
+								<a style="left: 17%; top: 29%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-1')">
 									<strong>1</strong>
 								</a>
 
-								<a style="left: 39%; top: 30%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="麥克風軟管" data-img="img/products/YS-150/YS-150-01b1.png"
-									data-intro="直徑 0.11公分軟管，可 180 定位將麥克風調整至您最適合的位置" data-introb="">
+								<a style="left: 28%; top: 50%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-2')">
 									<strong>2</strong>
 								</a>
 
-								<a style="right: 35%; top: 44%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="超輕量掛頸設計" data-img="img/products/YS-150/YS-150-01c.png"
-									data-intro="> 電源與功能鍵合而為一，以達輕薄短小目的、操作依舊" data-introb="> LED 清晰顯示方式，可輕易了解麥克風狀態">
+								<a style="right: 26%; top: 57%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-3')">
 									<strong>3</strong>
 								</a>
 
-								<a style="right: 39%; top: 73%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="電源鍵 / 功能鍵 / LED燈號顯示"
-									data-img="img/products/YS-150/YS-150-01d.png" data-intro="LED 清晰顯示方式，可輕易了解麥克風狀態" data-introb="">
+								<a style="right: 39%; top: 69%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-4')">
 									<strong>4</strong>
 								</a>
 							</div>
-							<div class="modal fade" id="YS-100_intro" tabindex="-1" role="dialog" aria-labelledby="YS-100_introLabel"
-								aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h4 class="modal-title" id="YS-100_introLabel">Title</h4>
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-										</div>
-										<div class="modal-body">
-											<p class="text-left note"></p>
-											<p class="text-left noteb"></p>
-											<img src="" alt="" class="img-responsive img-thumbnail">
-										</div>
-									</div>
-								</div>
-							</div>
+						</div>
+						<div class="col-lg-6 mb-4 mb-lg-0">
+							<ol class="list list-ordened list-ordened-style-2 pl-0">
+								<li class="ys-1">
+									<h4 class="font-weight-semibold mb-1">海綿套 :</h4>
+									<span class="text-3-4">可水洗 隨時更換。</span>
+								</li>
+								<li class="ys-2">
+									<h4 class="font-weight-semibold mb-1">麥克風軟管 :</h4>
+									<span class="text-3-4">直徑 0.11公分軟管，可 180 定位將麥克風調整至您最適合的位置。</span>
+								</li>
+								<li class="ys-3">
+									<h4 class="font-weight-semibold mb-1">超輕量掛頸設計 :</h4>
+									<span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作依舊。</span>
+								</li>
+								<li class="ys-4">
+									<h4 class="font-weight-semibold mb-1">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
+									<span class="text-3-4">LED 清晰顯示方式，可輕易了解麥克風狀態。</span>
+								</li>
+							</ol>
+							<div class="pro-spec">
+								<ul class="specNote" style="max-width: 665px;">
+									<li>
+										<i class="far fa-drafting-compass"></i>
+										<span>全球首創<br>穿戴設計</span>
+									</li>
+									<li>
+										<i class="far fa-microchip"></i>
+										<span>手機大廠<br>高通晶片</span>
+									</li>
+									<li>
+										<i class="far fa-lightbulb"></i>
+										<span>簡潔<br>LED燈號</span>
+									</li>
+									<li>
+										<i class="far fa-thumbs-up"></i>
+										<span>簡易<br>操作介面</span>
+									</li>
+									<li>
+										<i class="far fa-microphone-alt"></i>
+										<span>高清晰<br>立體音質</span>
+									</li>
+									<li>
+										<i class="far fa-battery-bolt"></i>
+										<span>長效電池<br>+保護晶片</span>
+									</li>
+								</ul>
+							</div>							
 						</div>
 					</div>
-
-				</div>
-				<div class="pro-spec">
-					<ul class="specNote" style="max-width: 665px;">
-						<li>
-							<i class="far fa-drafting-compass"></i>
-							<span>全球首創<br>穿戴設計</span>
-						</li>
-						<li>
-							<i class="far fa-microchip"></i>
-							<span>手機大廠<br>高通晶片</span>
-						</li>
-						<li>
-							<i class="far fa-lightbulb"></i>
-							<span>簡潔<br>LED燈號</span>
-						</li>
-						<li>
-							<i class="far fa-thumbs-up"></i>
-							<span>簡易<br>操作介面</span>
-						</li>
-						<li>
-							<i class="far fa-microphone-alt"></i>
-							<span>高清晰<br>立體音質</span>
-						</li>
-						<li>
-							<i class="far fa-battery-bolt"></i>
-							<span>長效電池<br>+保護晶片</span>
-						</li>
-					</ul>
 				</div>
 			</div>
 
@@ -735,57 +750,56 @@
 					</div>
 
 					<div class="row">
-						<div class="col">
+						<div class="col-lg-6 mb-4 mb-lg-0">
 							<div class="image-hotspots">
 								<img src="img/products/YS-200/YS-200-01.png" class="img-fluid" />
 
-								<a style="left: 34%; top: 20%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="堅固 6.3mm 插頭" data-img="img/products/YS-200/YS-200-01b.png"
-									data-intro="可達10,000次插拔不損壞。傳統與特製 L 型插頭，可依設備環境選購。" data-introb="">
+								<a style="left: 18%; top: 20%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-1')">
 									<strong>1</strong>
 								</a>
 
-								<a style="left: 40%; top: 40%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="特殊線扣設計" data-img="img/products/YS-200/YS-200-01c1.png"
-									data-intro="經由電纜線前結插頭與主機，兩端的線扣更加強產品的一體性，增加使用時的彈性，也避免損壞。" data-introb="">
+								<a style="left: 29%; top: 36%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-2')">
 									<strong>2</strong>
 								</a>
 
-								<a style="left: 41%; top: 60%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="插頭與主機連接電纜" data-img="img/products/YS-200/YS-200-01c.png"
-									data-intro="使產品更適應環境的需要，減少碰撞，易於使用。">
+								<a style="left: 39%; top: 51%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-3')">
 									<strong>3</strong>
 								</a>
 
-								<a style="right: 35%; top: 60%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="電源鍵 / 功能鍵 / LED燈號顯示"
-									data-img="img/products/YS-200/YS-200-01d.png" data-intro="> 電源與功能鍵合而為一，以達輕薄短小目的、操作依舊" data-introb="> LED
-										清晰顯示方式，可輕易了解麥克風狀態">
+								<a style="right: 14%; top: 63%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-4')">
 									<strong>4</strong>
 								</a>
 
-								<a style="right: 29%; top: 79%;" class="image-hotspot image-hotspot-primary" data-toggle="modal"
-									data-target="#YS-100_intro" data-title="一體化 無插座設計" data-img="img/products/YS-200/YS-200-01.png"
-									data-intro="無外接線，避免接觸不良造成雜音。" data-introb="">
+								<a style="right: 32%; top: 86%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-5')">
 									<strong>5</strong>
 								</a>
-							</div>
-							<div class="modal fade" id="YS-100_intro" tabindex="-1" role="dialog" aria-labelledby="YS-100_introLabel"
-								aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h4 class="modal-title" id="YS-100_introLabel">Title</h4>
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-										</div>
-										<div class="modal-body">
-											<p class="text-left note"></p>
-											<p class="text-left noteb"></p>
-											<img src="" alt="" class="img-responsive img-thumbnail">
-										</div>
-									</div>
-								</div>
-							</div>
+							</div>							
+						</div>
+						<div class="col-lg-6 mb-4 mb-lg-0 pt-5">
+							<ol class="list list-ordened list-ordened-style-2 pl-0">
+								<li class="ys-1">
+									<h4 class="font-weight-semibold mb-1">堅固 6.3mm 插頭 :</h4>
+									<span class="text-3-4">可達10,000次插拔不損壞。傳統與特製 L 型插頭，可依設備環境選購。</span>
+								</li>
+								<li class="ys-2">
+									<h4 class="font-weight-semibold mb-1">特殊線扣設計 :</h4>
+									<span class="text-3-4">經由電纜線前結插頭與主機，兩端的線扣更加強產品的一體性，增加使用時的彈性，也避免損壞。</span>
+								</li>
+								<li class="ys-3">
+									<h4 class="font-weight-semibold mb-1">插頭與主機連接電纜 :</h4>
+									<span class="text-3-4">使產品更適應環境的需要，減少碰撞，易於使用。</span>
+								</li>
+								<li class="ys-4">
+									<h4 class="font-weight-semibold mb-1">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
+									<span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作依舊。<br>LED
+										清晰顯示方式，可輕易了解麥克風狀態。</span>
+								</li>
+								</li>
+								<li class="ys-5">
+									<h4 class="font-weight-semibold mb-1">一體化 無插座設計 :</h4>
+									<span class="text-3-4">無外接線，避免接觸不良造成雜音。</span>
+								</li>
+							</ol>
 						</div>
 					</div>
 
@@ -1460,6 +1474,17 @@
 			$('#YS-100_intro').on('hide.bs.modal', function (event) {
 				modalAnim('zoomOut');
 			})
+
+			selectItem = function(y) {
+				const ysData = [ 'ys-1', 'ys-2', 'ys-3', 'ys-4', 'ys-5', 'ys-6' ]
+				for (let item = 1; item <= ysData.length; item ++) {
+					if (`ys-${item}` === y ) {
+						$(`.ys-${item}`).addClass("actived");
+					} else {
+						$(`.ys-${item}`).removeClass("actived");
+					}
+ 				}
+			};
 
 		})
 	</script>
