--- a/service.html
+++ b/service.html
@@ -81,7 +81,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle active" href="index.html">
+														<a class="dropdown-item dropdown-toggle" href="index.html">
 															首頁
 														</a>														
 													</li>
@@ -95,20 +95,24 @@
 															產品介紹
 														</a>
 														<ul class="dropdown-menu">
-															<li>
-																<a class="dropdown-item" href="#">Headers</a>
+															<li class="dropdown-submenu">
+																<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
+																<ul class="dropdown-menu">
+																	<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																	<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																	<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																	<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																</ul>
 															</li>
 															<li>
-																<!---onclick="return gtag_report_conversion('http://youngtone.com.tw/smartMic.htm');"--->
-																<a class="dropdown-item" href="smartMic.html">二代智慧無線麥克風擴音系列</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="YH801.html">一代無線麥克風組</a>
+																<a class="dropdown-item" href="YH801.html">
+																	YH-801 一代無線麥克風組
+																</a>
 															</li>
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="service.html">
+														<a class="dropdown-item dropdown-toggle active" href="service.html">
 															技術支援
 														</a>
 													</li>
