--- a/YS250.html
+++ b/YS250.html
@@ -125,6 +125,11 @@
                           </a>
                         </li>
                         <li class="dropdown">
+                          <a class="dropdown-item dropdown-toggle" href="viedo.html">
+                            Youtube 教學
+                          </a>
+                        </li>
+                        <li class="dropdown">
                           <a class="dropdown-item dropdown-toggle" href="shop.html">
                             哪裡購買
                           </a>
@@ -213,7 +218,7 @@
                   <strong>7</strong>
                 </a>
               </div>
-              <div class="appear-animation animated fadeIn appear-animation-visible">
+              <div class="animated fadeIn appear-animation-visible">
                 <h4 class="pt-5"><strong>產品規格 ：</strong></h4>
                 <ul class="list list-icons list-dark mt-2">
                   <li><i class="fas fa-sparkles top-4"></i> 尺寸 11.8 x 8.2 x 5.8 cm</li>
@@ -292,62 +297,54 @@
           <div class="py-5 pt-5 mt-5">
             <a name="p01"></a>
             <div class="text-center">
+              <a id="intro"></a>
               <h3 class="text-center font-weight-extra-bold line-height-7 text-7 mb-0">產品特色</h3>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-6 mb-4 mb-lg-0">
               <ul class="list list-icons list-primary">                
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="0">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">音質 :</h4>
                   <span class="text-3-4">藍牙立體聲 音質清晰 人聲原音重現。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="300">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">外觀/重量 :</h4>
                   <span class="text-3-4">流線型新潮外觀 體積小巧 只有 300 公克。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="600">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">半導體技術開發設計 :</h4>
                   <span class="text-3-4">體積小、重量輕、壽命長、使用時數更長。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="900">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">手機無線技術 :</h4>
                   <span class="text-3-4">低幅射、免對頻、距離遠、設備間不干擾。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="1200">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">高通藍牙晶片 台積電製程，隨開即用 :</h4>
                   <span class="text-3-4">2秒開機 麥克風/手機立即連線。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="1500">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">無線 :</h4>
                   <span class="text-3-4">無耳麥接頭 不會有雜音、除了充電 全部無線。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="1800">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">人體工學工業設計 :</h4>
                   <span class="text-3-4">以使用者習慣出發，輕巧舒適為目標，造型優雅 質感細緻。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="2100">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">電池 :</h4>
                   <span class="text-3-4">電動車等級Panasonics強效鋰電池，環保 USB 充電。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="2400">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">喇叭 :</h4>
                   <span class="text-3-4">稀有金屬 <span
@@ -357,44 +354,44 @@
             </div>
             <div class="col-lg-6">
               <ul class="list list-icons list-primary">
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="0">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">功率 :</h4>
                   <span class="text-3-4">聲音宏亮 擴音範圍涵蓋 10米學生教室。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="300">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">特殊功能 :</h4>
                   <span class="text-3-4">一個麥克風 兩個音箱同步一起響
                     <span class="text-success font-weight-semibold text-4">(一麥雙享)</span>。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="600">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">距離 :</h4>
                   <span class="text-3-4">低功率隱藏式天線 距離達 20米以上。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="1200">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">電量顯示 :</h4>
                   <span class="text-3-4">4段 LED 電量顯示 簡單明瞭 還可邊充電邊使用。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="1500">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">有線麥克風 (旗艦版) :</h4>
                   <span class="text-3-4">音箱兼具無線擴音與有線麥克風混音共用；或是有線講話+手機無線播放音樂/教材。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="1800">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">去回授 (旗艦版) :</h4>
                   <span class="text-3-4">針對有線麥克風另有特殊設計 避免近距離聲音回授 尖叫。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
+                <li class="text-quaternary"
                   data-appear-animation-delay="2100">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">全球獨家 :</h4>
