--- a/shop.html
+++ b/shop.html
@@ -117,6 +117,11 @@
 														</a>
 													</li>
 													<li class="dropdown">
+														<a class="dropdown-item dropdown-toggle" href="viedo.html">
+															Youtube 教學
+														</a>
+													</li>
+													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle active" href="shop.html">
 															哪裡購買
 														</a>
