--- a/YH801.html
+++ b/YH801.html
@@ -125,6 +125,11 @@
                           </a>
                         </li>
                         <li class="dropdown">
+                          <a class="dropdown-item dropdown-toggle" href="viedo.html">
+                            Youtube 教學
+                          </a>
+                        </li>
+                        <li class="dropdown">
                           <a class="dropdown-item dropdown-toggle" href="shop.html">
                             哪裡購買
                           </a>
@@ -162,41 +167,39 @@
       </section>
       </div>
       <div class="container position-relative z-index-3 spacer pt-5 py-2 my-5">
-        <div class="row">          
-          <h3 class="font-weight-bold text-transform-none text-5 line-height-2 mb-3">養聲堂無線麥風一代與二代產品差異</h3>
-          <div class="row  align-items-top justify-content-center">
-            <div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
-                data-appear-animation-delay="200">
-              <ul class="list list-icons list-icons-lg">
-                <li>
-                  <i class="fas fa-angle-right"></i>
-                  <span class="text-4 font-weight-bold">第一代：</span>
-                  <span class="text-4">重點在原創的穿戴頸掛設計，可將麥克風穿戴在身上，雖可以配對更換不同的麥克風或主機，但無法與手機或無線音箱等週邊擴音設備一起使用。</span>
-                </li>
-                <li>
-                  <i class="fas fa-angle-right"></i>
-                  <span class="text-4 font-weight-bold">第二代：</span>
-                  <span
-                    class="text-4">二代重新定義無線架構，接收端設備與手機或無線音箱等週邊擴音設備一起使用。</span>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
-              data-appear-animation-delay="500">
-              <ul class="list list-icons list-icons-lg">
-                <li>
-                  <i class="fas fa-angle-right"></i>
-                  <span class="text-4 font-weight-bold">一代與二代的無線都是使用<span
-                      class="text-danger">手機類藍牙技術</span>，但是內部無線的架構不同：</span>
-                  <span class="text-4">一代只有無線麥克風功能 / 二代麥克風等同於手機立體聲播放。</span>
-                </li>
-                <li>
-                  <i class="fas fa-angle-right"></i>
-                  <span class="text-4 font-weight-bold">抗干擾：</span>
-                  <span class="text-4">一代與二代的技術是手機等級技術，都可有效避開 WiFi 與其他無線設備的干擾。</span>
-                </li>
-              </ul>
-            </div>
+        <h3 class="font-weight-bold text-transform-none text-5 line-height-2 mb-3">養聲堂無線麥風一代與二代產品差異</h3>
+        <div class="row  align-items-top justify-content-center">
+          <div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
+              data-appear-animation-delay="200">
+            <ul class="list list-icons list-icons-lg">
+              <li>
+                <i class="fas fa-angle-right"></i>
+                <span class="text-4 font-weight-bold">第一代：</span>
+                <span class="text-4">重點在原創的穿戴頸掛設計，可將麥克風穿戴在身上，雖可以配對更換不同的麥克風或主機，但無法與手機或無線音箱等週邊擴音設備一起使用。</span>
+              </li>
+              <li>
+                <i class="fas fa-angle-right"></i>
+                <span class="text-4 font-weight-bold">第二代：</span>
+                <span
+                  class="text-4">二代重新定義無線架構，接收端設備與手機或無線音箱等週邊擴音設備一起使用。</span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6 appear-animation" data-appear-animation="fadeInLeftShorter"
+            data-appear-animation-delay="500">
+            <ul class="list list-icons list-icons-lg">
+              <li>
+                <i class="fas fa-angle-right"></i>
+                <span class="text-4 font-weight-bold">一代與二代的無線都是使用<span
+                    class="text-danger">手機類藍牙技術</span>，但是內部無線的架構不同：</span>
+                <span class="text-4">一代只有無線麥克風功能 / 二代麥克風等同於手機立體聲播放。</span>
+              </li>
+              <li>
+                <i class="fas fa-angle-right"></i>
+                <span class="text-4 font-weight-bold">抗干擾：</span>
+                <span class="text-4">一代與二代的技術是手機等級技術，都可有效避開 WiFi 與其他無線設備的干擾。</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -291,7 +294,7 @@
                 <strong>7</strong>
               </a>
             </div> -->
-            <div class="container appear-animation animated fadeIn appear-animation-visible">
+            <div class="container animated fadeIn appear-animation-visible">
               <h4 class="pt-5"><strong>產品規格 ：</strong></h4>
               <div class="row">
                 <div class="col-lg-6 mb-4 mb-lg-0">
@@ -329,32 +332,29 @@
         <div class="container">
           <div class="py-5 pt-5 mt-5">
             <div class="text-center">
+              <a id="intro"></a>
               <h3 class="text-center font-weight-extra-bold line-height-7 text-7 mb-0">產品特色</h3>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-6 mb-4 mb-lg-0">
               <ul class="list list-icons list-primary">
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="0">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">頸掛穿戴式麥克風設計 :</h4>
                   <span class="text-3-4">釋放雙手，適合長時間配戴，完全無負擔。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="300">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">簡約設計 :</h4>
                   <span class="text-3-4">一鍵操作，無頻道限制 免對頻，燈號清晰指示連線狀態。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="600">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">可調整收音桿 :</h4>
                   <span class="text-3-4">直徑0.1公分的蛇管，提供最彈性的收音角度，也不造成視覺的影響。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="900">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">收音麥克風 :</h4>
                   <span class="text-3-4">極小化麥克風，指向性設計，隔離周邊雜音 並避免嘯叫。</span>
@@ -363,20 +363,17 @@
             </div>
             <div class="col-lg-6">
               <ul class="list list-icons list-primary">
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="0">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">獨家提供 L 型插頭 :</h4>
                   <span class="text-3-4">主機 可避免因插頭突出而不慎撞斷。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="300">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">一體設計 :</h4>
                   <span class="text-3-4">機身皆一體設計，避免接頭過多接觸不良，鬆脫造成聲音的干擾。</span>
                 </li>
-                <li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-                  data-appear-animation-delay="600">
+                <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold mb-1">主機線扣設計 :</h4>
                   <span class="text-3-4">額外的線扣設計，增加主機與插頭間強固性，避免拉扯造成損壞。</span>
@@ -560,7 +557,7 @@
                       <span
                         class="thumb-info thumb-info-lighten thumb-info-bottom-info thumb-info-centered-icons border-radius-4">
                         <span class="thumb-info-wrapper border-radius-4">
-                          <img src="img/products/YH-801/003.npg" class="img-fluid border-radius-4" alt="">
+                          <img src="img/products/YH-801/003.png" class="img-fluid border-radius-4" alt="">
                           <span class="thumb-info-title">
                             <span class="thumb-info-inner line-height-1 font-weight-bold text-dark position-relative top-3
 																pb-2">示意圖</span>
