--- a/YS150.html
+++ b/YS150.html
@@ -125,6 +125,11 @@
 													</a>
 												</li>
 												<li class="dropdown">
+													<a class="dropdown-item dropdown-toggle" href="viedo.html">
+														Youtube 教學
+													</a>
+												</li>
+												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="shop.html">
 														哪裡購買
 													</a>
@@ -253,38 +258,34 @@
 				<div class="container">
 					<div class="py-5 pt-5 mt-5">
 						<div class="text-center">
+							<a id="intro"></a>
 							<h3 class="text-center font-weight-extra-bold line-height-7 text-7 mb-0">產品特色</h3>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-6 mb-4 mb-lg-0">
 							<ul class="list list-icons list-primary">
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="0">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">智慧連結 :</h4>
 									<span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="300">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">自動連接 :</h4>
 									<span class="text-3-4">免對頻。開機後智慧搜尋，自動對頻 不串音，自動連結立即使用。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="600">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">功率調整 :</h4>
 									<span class="text-3-4">同手機的無線功率動態調整技術；省電，以維護麥克風的擴音品質。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="900">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">抗干擾 :</h4>
 									<span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾，一對一連結。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="1200">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">環境回授 :</h4>
 									<span class="text-3-4">特殊指向麥克風設計，避免環境喇叭聲音的回授。</span>
@@ -293,26 +294,22 @@
 						</div>
 						<div class="col-lg-6">
 							<ul class="list list-icons list-primary">
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="0">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">產品設計 :</h4>
 									<span class="text-3-4">人體工學設計，以使用者便利與外觀為設計理念。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="300">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">重量 :</h4>
 									<span class="text-3-4">重量 43g。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="600">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">距離 :</h4>
 									<span class="text-3-4">15 公尺以上。</span>
 								</li>
-								<li class="appear-animation text-quaternary" data-appear-animation="fadeInUp"
-									data-appear-animation-delay="900">
+								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold mb-1">使用時間 :</h4>
 									<span class="text-3-4">12hr.；長效鋰電池與加日本電池保護晶片，延長電池壽命。</span>
