--- a/about.html
+++ b/about.html
@@ -117,6 +117,11 @@
 														</a>
 													</li>
 													<li class="dropdown">
+														<a class="dropdown-item dropdown-toggle" href="viedo.html">
+															Youtube 教學
+														</a>
+													</li>
+													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="shop.html">
 															哪裡購買
 														</a>
@@ -152,7 +157,7 @@
 					</div>
 				</section>
 
-				<section class="section custom-section-shape-background border-0 m-0" style="background-color: #FFFFFF;">
+				<section class="section custom-section-shape-background border-0 m-0 pb-0" style="background-color: #FFFFFF;">
 					<div class="container position-relative z-index-3 my-4">
 						<div class="row align-items-center justify-content-center">
 							<div class="col-lg-5 pr-lg-5 mb-4 mb-lg-0">
@@ -172,10 +177,9 @@
 						</div>
 					</div>
 				</section>
-
-				<!--<section class="section custom-section-shape-background custom-section-shape-background-reverse border-0 m-0">-->
-				<section class="section section-height-5 section-with-shape-divider border-0 lazyload my-5"
-					data-bg-src="img/parallax/parallax-2.jpg">
+				
+				<section class="section section-height-2 section-with-shape-divider border-0 lazyload my-5"
+					style="background-color: #ffd8b0;">
 					<div class="shape-divider shape-divider-reverse-xy" style="height: 109px;">
 						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							viewBox="0 0 2000 109" preserveAspectRatio="xMinYMin">
@@ -233,7 +237,7 @@
 					</div>
 				</section>
 
-				<section class="section custom-section-shape-background border-0 m-0" style="background-color: #FFFFFF;">
+				<section class="section custom-section-shape-background border-0 m-0 pt-0" style="background-color: #FFFFFF;">
 					<div class="container position-relative z-index-3 my-4">
 						<div class="row align-items-top justify-content-center">
 							<div class="col-lg-6 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
