--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 							<div class="header-column justify-content-end">
 								<div class="header-row">
 									<div class="header-nav header-nav-line header-nav-top-line header-nav-top-line-with-border order-2 order-lg-1">
-										<div class="header-nav-main header-nav-main-square header-nav-main-font-md header-nav-main-effect-2 header-nav-main-sub-effect-1">
+										<div class="header-nav-main header-nav-main-square header-nav-main-font-lg header-nav-main-effect-2 header-nav-main-sub-effect-1">
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
@@ -90,24 +90,36 @@
 															關於我們
 														</a>
 													</li>
-													<li class="dropdown">
+													<li class="dropdown dropdown-mega">
 														<a class="dropdown-item dropdown-toggle" href="#">
 															產品介紹
 														</a>
 														<ul class="dropdown-menu">
-															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
-																<ul class="dropdown-menu">
-																	<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																	<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
-																	<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																	<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
-																</ul>
-															</li>
 															<li>
-																<a class="dropdown-item" href="YH801.html">
-																	YH-801 一代無線麥克風組
-																</a>
+																<div class="dropdown-mega-content">
+																	<div class="row">
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																			</ul>
+																		</div>
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																				<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																			</ul>
+																		</div>
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">一代無線麥克風</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
+																			</ul>
+																		</div>
+																	</div>
+																</div>
 															</li>
 														</ul>
 													</li>
@@ -139,19 +151,22 @@
 					</div>
 				</div>
 			</header>
-
+			<!-- <section class="page-header page-header-classic page-header-background page-header-background-sm m-0"
+				style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;"> -->
 			<div role="main" class="main">				
-				<section class="page-header page-header-modern page-header-background page-header-background-sm m-0" style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;">
+				<section class="page-header page-header-classic"
+					style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1 class="font-weight-bold text-8 mb-0">關於我們</h1>
-							</div>
-							<div class="col-md-4 order-1 order-md-2 align-self-center">
-								<ul class="breadcrumb breadcrumb-light d-block text-md-right text-4 mb-0">
-									<li><a href="index.html" class="text-decoration-none">首頁</a></li>
-									<li class="active">關於我們</li>
+							<div class="col">
+								<ul class="breadcrumb">
+									<li><a href="index.html">首頁</a></li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col p-static">
+								<h1 class="text-5" data-title-border>關於我們</h1>
 							</div>
 						</div>
 					</div>
@@ -164,14 +179,14 @@
 								<img src="img/about/pic_about_00.jpg" class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200" alt="" />
 							</div>
 							<div class="col-lg-7 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="500">
-								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">YOUNG TONE TECHNOLOGY</h2>
-								<h3 class="font-weight-bold text-transform-none text-7 line-height-2 mb-3">公司起源</h3>
-								<p class="line-height-7 text-4 mb-3">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
-								<p class="line-height-7 text-4 mb-3">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。</p>
-								<p class="line-height-7 text-4 mb-3">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化 需求與規模量大的商品。電子業是以量取勝的環境，教學/導覽擴音需求相對電子業規模很小，開發的難度高、研發與經營成本將是數倍於一般電子產品，沒有廠商有意願投入。</p>
+								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-1">YOUNGTONE TECHNOLOGY</h2>
+								<h4 class="font-weight-bold text-transform-none positive-ls-1 mb-2">公司起源</h3>
+								<p class="line-height-7 mb-2">教學多年的同學一個用了 3年多的無線麥克風，零件已破裂不堪、部分以膠水貼黏、使用時參雜著對頻問題、干擾、雜音、使用時數不夠等問題。</p>
+								<p class="line-height-7 mb-2">走在學校走廊，尖銳不舒服小蜜蜂的聲音此起彼落，老師腰掛個又重又大音箱 身繞有線麥克風匆忙穿梭於教室間。這已是我們校園 20, 30年的常態。</p>
+								<p class="line-height-7 mb-2">過去，台灣電子業累積深厚的技術基礎，但大都是從事代工或做一些跟隨歐美大廠類似的產品，這些模式只做標準化 需求與規模量大的商品。電子業是以量取勝的環境，教學/導覽擴音需求相對電子業規模很小，開發的難度高、研發與經營成本將是數倍於一般電子產品，沒有廠商有意願投入。</p>
 								<blockquote class="blockquote-primary">
-									<header class="text-color-primary font-weight-bold text-4 mb-2">產品是要解決問題的</header>
-									<p class="font-weight-semibold line-height-7 text-4 mb-1">我們是一群電子科技擁有二十多年工作經驗的好友，各有各的專長；有無線晶片開發、產品工業設計、聲學設計…等等，也一直思考做些新產品回饋社會。看到這個同學這個用了 3年多殘破的無線麥克風，簡單的外型、功能也不便利，我們想、以我們的經驗應可以做出更好產品，雖然麥克風產品看似簡單，但須搭配現場使用體驗與不同環境的驗證，產品設計與過程皆比過去產品開發的問題複雜許多，另外還有生產供應鏈問題，但…還是試看吧 !  成功了、就可真正改變與解決教育現場/導覽擴音的需要。</p>
+									<header class="text-color-primary font-weight-bold mb-2">產品是要解決問題的</header>
+									<p class="font-weight-semibold line-height-7 mb-1">我們是一群電子科技擁有二十多年工作經驗的好友，各有各的專長；有無線晶片開發、產品工業設計、聲學設計…等等，也一直思考做些新產品回饋社會。看到這個同學這個用了 3年多殘破的無線麥克風，簡單的外型、功能也不便利，我們想、以我們的經驗應可以做出更好產品，雖然麥克風產品看似簡單，但須搭配現場使用體驗與不同環境的驗證，產品設計與過程皆比過去產品開發的問題複雜許多，另外還有生產供應鏈問題，但…還是試看吧 !  成功了、就可真正改變與解決教育現場/導覽擴音的需要。</p>
 								</blockquote>
 							</div>
 						</div>
@@ -192,7 +207,7 @@
 					<div class="container position-relative z-index-3 spacer py-5 my-5">
 						<div class="row align-items-center justify-content-center">
 							<div class="col-lg-7 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
-								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">OUR CHALANGE</h2>
+								<h2 class="text-color-primary font-weight-medium positive-ls-3 text-4 mb-0">OUR CHALLENGE</h2>
 								<h3 class="font-weight-bold text-transform-none text-7 line-height-2 mb-3">教學環境的問題</h3>
 								<p class="line-height-7 text-4 mb-3">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</p>
 								<div class="testimonial testimonial-secondary">
